trabajé sobre la rama animaciones para agregar una animación al h1 construcción desde https://animate.style/

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>MDV Constructora</title>
 	<link rel="shortcut icon" href="images/logos/favicon.png">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
 	<div class="gridHome">
@@ -37,7 +38,7 @@
 			</video>
 
 			<section>
-				<h1 class="construccion">CONSTRUCCIÓN</h1>
+				<h1 class="construccion animate__animated animate__fadeInUp">CONSTRUCCIÓN</h1>
 				<h2 class="segura">SEGURA Y CONFIABLE</h2>
 			</section>
 		</header>
